# SonettoHere

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml  local-config-manifest.yaml  main.py  pyproject.toml  requirements.txt  setup.py  start.bat  upgrade.bat  upgrade.py  version.py
.github/workflows/: ci-frontend.yml  ci-python.yml
agent/: graph.py  prompts.py
anthropic_skills/code-quality/: SKILL.md
anthropic_skills/debug/: SKILL.md
anthropic_skills/syntax-check/: SKILL.md
anthropic_skills/unit-test/: SKILL.md
api/: auth.py  const_session_store.py  context_usage.py  dependencies.py  health.py  interaction.py  server.py  session_manager.py  time_traveler.py
api/callbacks/: tool_extractors.py  websocket_callback.py
api/data/: auth_token.yaml  news.yaml  path_whitelist.yaml  sonetto.db
api/database/: __init__.py  provider_store.py  session_store.py
api/middleware/: auth.py  error_handler.py
api/providers/: __init__.py  enrich.py  manager.py  model_context_windows.py  openai_provider.py  store.py  vision.py
api/routes/: balance.py  chat.py  env_vars.py  files.py  images.py  mcp.py  news.py  path_whitelist.py  persona.py  providers.py  sessions.py  skills.py  sonetto_blocker.py
clients/: cli.py  qqbot.py
config/: .env.example  settings.py
config/personas/: AGENTS.md  SOUL.example.md
dev_docs/: context-menu.md  fix-staticfiles-websocket.md  git-conventions.md
dev_docs/bay-project/: overview.md  uml.md
dev_docs/convallaria/: ref-extend-guide.md
dev_docs/features/: image-recognition-fallback.md  model-vision-detection.md
dev_docs/notes/: tool-development-guide.md
devlog/: _misc.md  agent.md  api.md  memory.md  tests.md  tools.md  web.md
docs/: 00-结构总览.md  02-LangGraph状态图与状态管理.md  03-Tool与Skill系统.md  05-提示词与人设系统.md  06-客户端与回调系统.md  07-Web前端系统总览.md  08-Vue3组件树与响应式数据流.md  09-前端路由与组合式API.md  10-REST与前后端数据交互.md  11-WebSocket实时流式通信.md  12-从开发到生产：前端工程化.md
memory/: memory_manager.py  narrative.py  user_init.py
scripts/: git-pr-flow.sh
scripts/migrations/: README.md  from0to1.py
skills/: __init__.py
skills/bilibili/: SKILL.md  __init__.py  downloader.py  models.py  skill_download.py  skill_set_cookie.py
skills/files/: skill_file_edit.py
skills/interaction/: SKILL.md  skill_ask_multi_choice.py  skill_ask_qa.py  skill_ask_single_choice.py
skills/network/: SKILL.md  browser_manager.py  skill_scraper.py
skills/sub_agent/: skill_call_sub_agent.py
tests/: conftest.py
tests/test_api/: conftest.py  test_auth.py  test_auth_middleware.py  test_const_session_store.py  test_dependencies.py  test_health_routes.py  (+4 more)
tools/: __init__.py  base.py  mcp.py
web/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+179 files in other folders)
