[project]
name = "sonettohere"
version = "2.0.0"
description = "SonettoHere — LangChain-based ReAct AI Agent"
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic-settings>=2.0.0",
    "colorama>=0.4.0",
    "tiktoken>=0.7.0",
    "todoist-api-python>=2.0.0",
    "uapi-sdk-python>=0.1.17",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
    "qq-botpy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=81.0"]
build-backend = "setuptools.build_meta"
